// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render error alert correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0.5rem;
}

.c2 svg {
  fill: #423b63;
  vertical-align: middle;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  fill: #e65541;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #e65541;
  background-color: rgba(230,85,65,0.1);
  font-size: 0.875rem;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

<div
  class="c0"
  type="error"
>
  <div
    class="c1"
  >
    <i
      class="c2"
      cursor="default"
      fill="error"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
    </i>
  </div>
  <div
    class="c3"
  >
    Error Text
  </div>
</div>
`;

exports[`Alert should render info alert correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0.5rem;
}

.c2 svg {
  fill: #423b63;
  vertical-align: middle;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  fill: #4384f0;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #4384f0;
  background-color: rgba(67,132,240,0.1);
  font-size: 0.875rem;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

<div
  class="c0"
  type="info"
>
  <div
    class="c1"
  >
    <i
      class="c2"
      cursor="default"
      fill="info"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
    </i>
  </div>
  <div
    class="c3"
  >
    Info Text
  </div>
</div>
`;

exports[`Alert should render success alert correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0.5rem;
}

.c2 svg {
  fill: #423b63;
  vertical-align: middle;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  fill: #30be72;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #30be72;
  background-color: rgba(48,190,114,0.1);
  font-size: 0.875rem;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

<div
  class="c0"
  type="success"
>
  <div
    class="c1"
  >
    <i
      class="c2"
      cursor="default"
      fill="success"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </i>
  </div>
  <div
    class="c3"
  >
    Success Text
  </div>
</div>
`;

exports[`Alert should render warning alert correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0.5rem;
}

.c2 svg {
  fill: #423b63;
  vertical-align: middle;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  fill: #de8a15;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #de8a15;
  background-color: rgba(222,138,21,0.1);
  font-size: 0.875rem;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

<div
  class="c0"
  type="warning"
>
  <div
    class="c1"
  >
    <i
      class="c2"
      cursor="default"
      fill="warning"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        />
      </svg>
    </i>
  </div>
  <div
    class="c3"
  >
    Warning Text
  </div>
</div>
`;
